[fix] - mck-text-box fixed a color contrast ratio

--- a/webplugin/css/app/mck-sidebox-1.0.css
+++ b/webplugin/css/app/mck-sidebox-1.0.css
@@ -115,13 +115,13 @@
 
 #mck-text-box[contenteditable='true']:empty:not(:focus):before {
     content: attr(data-text);
-    color: #757575;
+    color: #42423D;
     font-style: italic;
 }
 
 #mck-text-box[contenteditable='false']:empty:before {
     content: attr(data-text);
-    color: #757575;
+    color: #42423D;
     font-style: italic;
 }
 
